# favorite_movies_api

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
core/: admin.py  api.py  forms.py  models.py  schemas.py  services.py
core/migrations/: 0001_initial.py  0002_auto_20210527_0135.py  0003_savedmovie.py
favorite_movies/: asgi.py  settings.py  urls.py  wsgi.py
