[tool.poetry]
name = "favorite_movides"
version = "0.1.0"
description = ""
authors = ["patrickdeangelis <patrick.angelis@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
django-ninja = "^0.13.0"
pydantic = "^1.8.2"
PyJWT = "^2.1.0"
python-decouple = "^3.4"
dj-database-url = "^0.5.0"
dj-static = "^0.0.6"
gunicorn = {version = "^20.1.0", extras = ["production"]}
psycopg2-binary = {version = "^2.8.6", extras = ["production"]}
IMDbPY = "^2021.4.18"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
